# photo-index

./: .gitignore  LICENSE  README.md  pyproject.toml  qdrant.service
documentation/: AUTOCOMPLETE_GUIDE.md  BUG_FIXES_AND_CLARIFICATIONS.md  COMPLETE_RELEASE_NOTES.md  FINAL_RELEASE_SUMMARY.md  FIND_SIMILAR_GUIDE.md  INCREMENTAL_DELETE_GUIDE.md  INDEXING_BUG_FIX.md  INSTALLATION_GUIDE.md  LIST_VALUES_README.md  MovieAnalysisREADEM.md  PHOTO_INDEXER_MERGE_DOCS.md  QDRANT_FALLBACK_LOGIC.md  QDRANT_SERVER_MIGRATION.md  RELEASE_NOTES.md  SEARCH_TOOLS_README.md  UTILS_REFACTORING_DOCS.md  WAITRESS_WARNINGS_FIX.md  WEB_UI_README.md
src/common/: config.py  exiftool.config  img_metadata_utils.py  utils.py  video_utils.py
src/common/test/: test_img_metadata_utils.py  test_utils.py
src/experiments/: ssim_exploreation.py  try_scene_detection.py
src/movie_processing/: movie_analyzer.py  scene_change_detector.py  scene_exporter.py
src/photo_index/: __init__.py  config.py  embedding_generator.py  exif_utils.py  face_detector.py  face_search.py  geocoding.py  index_photos.py  mac_metadata.py  photo_indexer.py  utils.py
src/photo_index/cli/: CLI_TOOLS_README.md  __init__.py  check_person_names.py  cleanup_index.py  delete_photo.py  get_description.py  get_exif.py  show_index.py
src/photo_index/test/: geocode_experiment.py  search_in_index.py  test_qdrant_connection.py
src/photo_search/: list_values.py  photo_search.py  search_cli.py
src/temp/: try_scene_detection.py
src/webui/: search_web.py
src/webui/static/: manual.html
src/webui/static/css/: autocomplete.css
src/webui/static/js/: autocomplete.js
src/webui/templates/: base.html  browse_values.html  index.html  photo_detail.html
