[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# The name of your project. This is the name PyPI will use.
name = "photo-index"
# The project's version (e.g., v0.1.0)
version = "0.0.1"
# A short description of your project
description = "Index photos, then search them"
# The primary author/maintainer
authors = [
    {name = "Andreas Paepcke", email = "paepcke@cs.stanford.edu"},
]
# A list of maintainers (can be the same as authors)
maintainers = [
    {name = "Andreas Paepcke", email = "paepcke@cs.stanford.edu"},
]
# A short description of the license
license = {text = "MIT License"} # Replace with your actual license, e.g., MIT, Apache-2.0, etc.
# A longer description (often read from a README file)
readme = "README.md"

# The minimum Python version required
requires-python = ">=3.12"

# Classifiers help users find your project on PyPI
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Project URLs (your repository link)
urls = {Repository = "https://github.com/paepcke/photo-index.git"}

# Specify any dependencies your project needs
dependencies = [
    # Example dependencies:
    "logging-singleton>=1.0.1",
    "numpy>=1.24.0",
    "ollama>=0.6.1",
    "torch>=2.0.0",
    "transformers>=4.45.0",
    "pillow>=10.0.0",
    "pillow-heif>=0.13.0",
    "qdrant-client>=1.16.0",
    "requests>=2.31.0",
    "xattr>=0.10.0",
    "tqdm>=4.67.1",
    "accelerate>=1.11.0",
    "requests>=2.32.5",
    "Flask>=3.1.2",
    "waitress>=3.0.2",
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.23.2",
    "opencv-python>=4.12.0.88",
    "scenedetect>=0.6.7.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "PyExifTool>=0.5.6",
]

# Optional groups of dependencies (e.g., for development or testing)
[project.optional-dependencies]
dev = [
    # "pytest",
    # "flake8",
]

# Configuration for tools/packaging backend
[tool.setuptools]
# The source code root directory is configured here:
# <project-root>/src is where setuptools will look for your package (e.g., src/photo_index)
package-dir = {"" = "src"}
